syntax = "proto3";
package verana.td.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "verana/td/v1/params.proto";
import "verana/td/v1/types.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/trustdeposit/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/td/v1/params";
  }
  rpc GetTrustDeposit(QueryGetTrustDepositRequest) returns (QueryGetTrustDepositResponse) {
    option (google.api.http).get = "/td/v1/get/{account}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetTrustDepositRequest is request type for the GetTrustDeposit RPC method
message QueryGetTrustDepositRequest {
  string account = 1;
}

// QueryGetTrustDepositResponse is response type for the GetTrustDeposit RPC method
message QueryGetTrustDepositResponse {
  TrustDeposit trust_deposit = 1 [(gogoproto.nullable) = false];
}